  compatible image and thumb nails.  Deprecated and removed older image
  handling code previously used to support these.

- LP# 544199 Fixed KeyError in Admin Delete Content view when nested nodes are
  selected for deletion.

- LP# 544199 Added 'path' to content selection grid used in some admin views.
  Changed sort index to 'path' for content selection grid.

3.27 (2010-04-08)
-----------------

- Add evolve script to retroactively prepend 'http://' to any profile website
  URLs that start with 'www.' (see LP#554013)

- Fix profile admin edit form so that the community memberships don't
  disappear when the groups are updated (fixes LP#556679)

- Slight tweak to the KarlManageMembers widget so it won't blow up when
  faced with a community that has no members

- Profile 'website' field now requires submitted values to start with
  'http://', 'https://', or 'www.'; if the last one is used 'http://' will be
  prepended to the stored value (fixes LP#554013)

- Re-add "default tool" dropdown to the add community form
  (fixes LP#554031)

- In order to be able to kill runaway converter processes correctly,
  change ``karl.utilities.baseconverter.BaseConverter.execute``: when
  creating a subprocess, don't use a shell to start the process
  (``shell=False``), use ``subprocess.PIPE`` as stdin, use
  ``subprocess.PIPE`` as stderr.

- Change converters that use ``execute``: don't try to redirect stderr
  output via the command.

- Change rtf2xml converter to not change directory to /tmp (not sure
  why it was doing that in the first place) as part of its execute
  command.

- Change rtf2xml converter to not pass ``--no-dtd`` on the command
  line.  This option has no effect on any recent rtf2xml command I can
  find.

- LP #552517: Fixed bug where new uploads w/ the same filename would fail
  to actually update the stored file.

- LP #553959 Fixed bug in edit_intranet form that would corrupt the portlets.
