@@ -490,14 +490,18 @@ def show_file_view(context, request):
 def download_file_view(context, request):
     # To view image-ish files in-line, use thumbnail_view.
     f = context.blobfile.open()
-    fname = context.filename
-    if isinstance(fname, unicode):
-        fname = fname.encode('utf-8')
     headers = [
-        ('Content-Disposition', 'attachment; filename=%s' % fname),
         ('Content-Type', context.mimetype),
         ('Content-Length', str(context.size)),
     ]
+
+    if 'save' in request.params:
+        fname = context.filename
+        if isinstance(fname, unicode):
+            fname = fname.encode('utf-8')
+        headers.append(
+            ('Content-Disposition', 'attachment; filename=%s' % fname)
+        )
 
     response = Response(headerlist=headers, app_iter=f)
     return response
