@@ -245,8 +245,12 @@
         <img width="32" height="32" border="0" alt="."
           src="${api.static_url}/images/${fileinfo.mimeinfo.large_icon_name}"/>
         <a style="padding-left: 0.2em;"
-          href="${api.here_url}dl/${api.context.filename}">Click here
-          to download the file</a>
+          href="${api.here_url}dl/${api.context.filename}?save=True">Click here
+          to download the file</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a style="padding-left: 0.2em;"
+          tal:condition="fileinfo.mimeinfo.viewable"
+          href="${api.here_url}dl/${api.context.filename}">Click here to view
+          the file</a>
       </div>
       <div style="padding-top: 0.3em; padding-left: 3.3em;">Size: ${fileinfo.size} - File type:
         ${fileinfo.mimeinfo.title}</div>
