@@ -57,6 +57,9 @@ Unreleased
 - LP# 544199 Added 'path' to content selection grid used in some admin views.
   Changed sort index to 'path' for content selection grid.
 
+- LP# 567532 Added a 'view' link to the show file view, in addition to the
+  already existing 'download' link.
+
 3.27 (2010-04-08)
 -----------------
 
